--- a/.istanbul.yml
+++ b/.istanbul.yml
@@ -1,11 +1,10 @@
 instrumentation:
-  root: packages
+  root: src
   extensions:
     - .js
   default-excludes: true
   excludes:
     - "**/*.spec.js"
-    - "**/lib/**"
   variable: __coverage__
   es-modules: true
   include-all-sources: true
