--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": ["es2015", "stage-0"],
+  "presets": ["es2015", "stage-1", "react"],
   "plugins": ["transform-runtime"],
   "env": {
     "test": {
