--- a/package.json
+++ b/package.json
@@ -40,13 +40,15 @@
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-runtime": "^6.7.5",
     "babel-preset-es2015": "^6.9.0",
-    "babel-preset-stage-0": "^6.5.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-1": "^6.5.0",
     "babel-runtime": "^6.9.2",
     "chai": "^3.5.0",
     "collect-json": "^1.0.8",
     "coveralls": "^2.11.9",
     "cross-env": "^1.0.7",
     "dmd": "^1.4.1",
+    "enzyme": "^2.4.1",
     "eslint": "^3.2.2",
     "eslint-config-airbnb": "^10.0.0",
     "eslint-plugin-babel": "^3.2.0",
@@ -65,6 +67,9 @@
     "minimist": "^1.2.0",
     "mocha": "^2.4.5",
     "nodemon": "^1.9.2",
+    "react": "^15.3.1",
+    "react-addons-test-utils": "^15.3.1",
+    "react-dom": "^15.3.1",
     "rimraf": "^2.5.2",
     "semver": "^5.1.0",
     "sinon": "^1.17.4",
