--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "babel src --ignore *.spec.js --out-dir build && babel-node scripts/copy-files.js",
     "clean": "rimraf build",
+    "docs": "jsdoc2md --configure docs/conf.json --files \"src/**/*.js\" -t docs/README.hbs.md -d 2 --partial \"./docs/partials/**/*.hbs\" --separators  -l JavaScript > README.md",
     "lint": "eslint src test/integration && echo \"eslint: no lint errors\"",
     "test": "cross-env NODE_ENV=test babel-node test/index.js",
     "test:coverage": "cross-env NODE_ENV=test babel-node ./node_modules/istanbul/lib/cli.js cover test/index.js",
@@ -40,10 +41,8 @@
     "babel-preset-stage-1": "^6.5.0",
     "babel-runtime": "^6.9.2",
     "chai": "^3.5.0",
-    "collect-json": "^1.0.8",
     "coveralls": "^2.11.9",
     "cross-env": "^1.0.7",
-    "dmd": "^1.4.1",
     "enzyme": "^2.4.1",
     "eslint": "^3.2.2",
     "eslint-config-airbnb": "^10.0.0",
@@ -55,8 +54,8 @@
     "fs-extra": "^0.30.0",
     "glob": "^7.0.3",
     "istanbul": "^1.0.0-alpha.2",
-    "jsdoc-parse": "github:nathanmarks/jsdoc-parse#es6-customizations",
-    "jsdoc-to-markdown": "^1.3.6",
+    "jsdoc-export-default-interop": "^0.3.1",
+    "jsdoc-to-markdown": "^2.0.0-alpha.13",
     "jsdom": "^9.4.2",
     "jss": "^5.4.0",
     "jss-preset-default": "^0.2.0",
