--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-1": "^6.5.0",
     "babel-runtime": "^6.9.2",
+    "benchmark": "^2.1.1",
     "chai": "^3.5.0",
     "coveralls": "^2.11.9",
     "cross-env": "^1.0.7",
