--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.3.0",
   "scripts": {
-    "build": "babel src --ignore *.spec.js --out-dir build && babel-node scripts/copy-files.js",
+    "build": "babel src --ignore *.spec.js --out-dir build && babel-node scripts/copy-files.js && cd build",
     "clean": "rimraf build",
     "docs": "jsdoc2md --configure docs/conf.json --files \"src/**/*.js\" -t docs/README.hbs.md -d 2 --partial \"./docs/partials/**/*.hbs\" --separators  -l JavaScript > README.md",
     "lint": "eslint src test/integration && echo \"eslint: no lint errors\"",
