--- a/package.json
+++ b/package.json
@@ -28,47 +28,47 @@
     "url": "https://github.com/nathanmarks/jss-theme-reactor/issues"
   },
   "peerDependencies": {
-    "jss": "^5.4.0"
+    "jss": "^5.5.6"
   },
   "devDependencies": {
-    "app-module-path": "^1.1.0",
-    "babel-cli": "^6.7.7",
-    "babel-eslint": "^6.0.3",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-transform-runtime": "^6.7.5",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-1": "^6.5.0",
-    "babel-runtime": "^6.9.2",
-    "benchmark": "^2.1.1",
+    "app-module-path": "^2.1.0",
+    "babel-cli": "^6.18.0",
+    "babel-eslint": "^7.1.0",
+    "babel-loader": "^6.2.7",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-1": "^6.16.0",
+    "babel-runtime": "^6.18.0",
+    "benchmark": "^2.1.2",
     "chai": "^3.5.0",
-    "coveralls": "^2.11.9",
-    "cross-env": "^1.0.7",
-    "enzyme": "^2.4.1",
-    "eslint": "^3.2.2",
-    "eslint-config-airbnb": "^10.0.0",
-    "eslint-plugin-babel": "^3.2.0",
-    "eslint-plugin-import": "^1.10.3",
-    "eslint-plugin-jsx-a11y": "^2.1.0",
-    "eslint-plugin-mocha": "^4.1.0",
-    "eslint-plugin-react": "^6.0.0",
-    "fs-extra": "^0.30.0",
-    "glob": "^7.0.3",
+    "coveralls": "^2.11.14",
+    "cross-env": "^3.1.3",
+    "enzyme": "^2.5.1",
+    "eslint": "^3.9.1",
+    "eslint-config-airbnb": "^12.0.0",
+    "eslint-plugin-babel": "^3.3.0",
+    "eslint-plugin-import": "^1.16.0",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-mocha": "^4.7.0",
+    "eslint-plugin-react": "^6.6.0",
+    "fs-extra": "^1.0.0",
+    "glob": "^7.1.1",
     "istanbul": "^1.0.0-alpha.2",
     "jsdoc-export-default-interop": "^0.3.1",
-    "jsdoc-to-markdown": "^2.0.0-alpha.13",
-    "jsdom": "^9.4.2",
-    "jss": "^5.4.0",
-    "jss-preset-default": "^0.2.0",
+    "jsdoc-to-markdown": "^2.0.1",
+    "jsdom": "^9.8.3",
+    "jss": "^5.5.6",
+    "jss-preset-default": "^0.6.0",
     "minimist": "^1.2.0",
-    "mocha": "^2.4.5",
-    "nodemon": "^1.9.2",
-    "react": "^15.3.1",
-    "react-addons-test-utils": "^15.3.1",
-    "react-dom": "^15.3.1",
-    "rimraf": "^2.5.2",
-    "semver": "^5.1.0",
-    "sinon": "^1.17.4",
+    "mocha": "^3.1.2",
+    "nodemon": "^1.11.0",
+    "react": "^15.3.2",
+    "react-addons-test-utils": "^15.3.2",
+    "react-dom": "^15.3.2",
+    "rimraf": "^2.5.4",
+    "semver": "^5.3.0",
+    "sinon": "^1.17.6",
     "webpack": "^2.1.0-beta.13"
   },
   "dependencies": {}
