--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
   "bugs": {
     "url": "https://github.com/nathanmarks/jss-theme-reactor/issues"
   },
-  "peerDependencies": {
-    "jss": "^5.5.6"
+  "dependencies": {
+    "jss": "^5.5.6",
+    "jss-vendor-prefixer": "^3.0.3",
+    "murmurhash-js": "^1.0.0"
   },
   "devDependencies": {
     "app-module-path": "^2.1.0",
@@ -62,8 +64,7 @@
     "jsdoc-export-default-interop": "^0.3.1",
     "jsdoc-to-markdown": "^2.0.1",
     "jsdom": "^9.8.3",
-    "jss": "^5.5.6",
-    "jss-preset-default": "^0.6.0",
+    "jss-preset-default": "^0.9.0",
     "minimist": "^1.2.0",
     "mocha": "^3.1.2",
     "nodemon": "^1.11.0",
@@ -74,6 +75,5 @@
     "semver": "^5.3.0",
     "sinon": "^1.17.6",
     "webpack": "^2.1.0-beta.13"
-  },
-  "dependencies": {}
+  }
 }
