Adjust run scripts

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "version": "0.7.0",
   "scripts": {
-    "build": "babel src --ignore *.spec.js --out-dir build && babel-node scripts/copy-files.js && cd build",
+    "build": "babel src --ignore *.spec.js --out-dir build && babel-node scripts/copy-files.js",
     "build-publish": "npm run build && cd build && npm publish && cd .. && npm run clean",
     "clean": "rimraf build",
     "docs": "jsdoc2md --configure docs/conf.json --files \"src/**/*.js\" -t docs/README.hbs.md -d 2 --partial \"./docs/partials/**/*.hbs\" --separators  -l JavaScript > README.md",
