--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "babel-runtime": "^6.18.0",
     "benchmark": "^2.1.2",
     "chai": "^3.5.0",
+    "common-tags": "^1.4.0",
     "coveralls": "^2.11.14",
     "cross-env": "^3.1.3",
     "enzyme": "^2.5.1",
