--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build-publish": "npm run build && cd build && npm publish && cd .. && npm run clean",
     "clean": "rimraf build",
     "docs": "jsdoc2md --configure docs/conf.json --files \"src/**/*.js\" -t docs/README.hbs.md -d 2 --partial \"./docs/partials/**/*.hbs\" --separators  -l JavaScript > README.md",
+    "flow": "flow --show-all-errors",
     "lint": "eslint src test/integration && echo \"eslint: no lint errors\"",
     "test": "cross-env NODE_ENV=test babel-node test/index.js",
     "test:coverage": "cross-env NODE_ENV=test babel-node ./node_modules/istanbul/lib/cli.js cover test/index.js",
@@ -55,10 +56,12 @@
     "eslint": "^3.9.1",
     "eslint-config-airbnb": "^12.0.0",
     "eslint-plugin-babel": "^3.3.0",
+    "eslint-plugin-flowtype": "^2.29.1",
     "eslint-plugin-import": "^1.16.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-mocha": "^4.7.0",
     "eslint-plugin-react": "^6.6.0",
+    "flow-bin": "^0.37.0",
     "fs-extra": "^1.0.0",
     "glob": "^7.1.1",
     "istanbul": "^1.0.0-alpha.2",
