--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,6 @@
 machine:
   node:
-    version: 6.1.0
+    version: 6.9.5
 
 dependencies:
   override:
@@ -8,6 +8,9 @@ dependencies:
 
 test:
   override:
-    - npm run lint 
+    - npm run lint
     - npm run flow
-    - npm run test:coverage && cat ./test/coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
+    - npm run test:coverage
+  post:
+    - bash <(curl -s https://codecov.io/bash)
+
