--- a/package.json
+++ b/package.json
@@ -32,10 +32,9 @@
     "url": "https://github.com/nathanmarks/jss-theme-reactor/issues"
   },
   "dependencies": {
-    "jss": "^6.3.0",
-    "jss-preset-default": "^1.3.1",
-    "jss-vendor-prefixer": "^4.0.0",
-    "murmurhash-js": "^1.0.0"
+    "jss": "^7.0.3",
+    "jss-preset-default": "^2.0.0",
+    "jss-vendor-prefixer": "^5.1.0"
   },
   "devDependencies": {
     "app-module-path": "^2.1.0",
